# olist-ecommerce-analytics-dbt

./: .gitignore  LICENSE  README.md  pyproject.toml
dbt/: README.md  dbt_project.yml  profiles.yml
dbt/models/marts/core/: _core__models.yml  _time_spine.yml  dim_customers.sql  dim_dates.sql  dim_products.sql  dim_sellers.sql  fct_order_items.sql  fct_orders.sql  fct_payments.sql  metricflow_time_spine.sql
dbt/models/marts/semantic/: sem_customers.yml  sem_orders.yml
dbt/models/staging/: _olist__models.yml  _olist__sources.yml  stg_olist__customers.sql  stg_olist__order_items.sql  stg_olist__orders.sql  stg_olist__payments.sql  stg_olist__products.sql  stg_olist__sellers.sql
dbt/tests/: assert_no_negative_revenue.sql  assert_order_revenue_matches_payments.sql
load_data/: load_olist.py
