[project]
name = "analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "Viswanath"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "kagglehub (>=1.0.0,<2.0.0)",
    "duckdb (>=1.5.2,<2.0.0)",
    "dbt-core (>=1.11.8,<2.0.0)",
    "dbt-duckdb (>=1.10.1,<2.0.0)",
    "dbt-metricflow[duckdb] (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
